test/_migrate/pass/lifetime.rill
def main() {
    f();
}

import std.stdio;

def f() {
    val mutable y = address_of(10);
    (*y).print();
}
