test/_migrate/fail_compilation/lifetime.rill
def main() {
}

import std.stdio;

def f() {
    val mutable y = &10;
    {
        val x = 72;
        y = &x;
    }
    (*y).print();
}
